# PPchem_DDIP

./: .copier-answers.yml  App_deployement.ipynb  LICENSE  README.md  app.py  pyproject.toml  requirements.txt  setup.py  test.ipynb  tox.ini
.github/workflows/: environment.yml  environment2.yml
Doc/docs_out/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
Doc/docs_out/_modules/: index.html
Doc/docs_out/_modules/ppchem_ddip/: example_module.html
Doc/docs_out/_sources/api/: modules.rst.txt  ppchem_ddip.rst.txt
Doc/docs_out/api/: modules.html  ppchem_ddip.html
Doc/docs_out/doctrees/: IC50.doctree  SMILES.doctree  environment.pickle  index.doctree
Doc/docs_out/html/: .buildinfo  IC50.html  SMILES.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
Doc/docs_out/html/_sources/: IC50.rst.txt  SMILES.rst.txt
Doc/docs_out/html/_static/: alabaster.css  documentation_options.js
Doc/source/: conf.py  index.rst
docs/source/: SMILES.rst  conf.py  index.md  index.rst
docs/source/api/: ppchem_ddip.rst
models/: fcn_model.joblib  fcnn_model.joblib  svm_model.joblib  variance_threshold_selector.pkl
notebooks/: Project_2nd_version.ipynb  Project_Drug.ipynb  selection.joblib
src/ppchem_ddip/: __init__.py  functions.py
tests/: test_example_module.py
