[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "PPchem_DDIP"
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
description = "PPchem-DDIP project"
dependencies = [
    # dependencies
]
authors = [
    {name = "Thomas Fischer", email = "thomas.fischer@epfl.ch"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.urls]
source = "https://github.com/Thomas-Fischer98/PPchem_DDIP"
tracker = "https://github.com/Thomas-Fischer98/PPchem_DDIP/issues"

[project.optional-dependencies]
test = [
    "hypothesis",
    "pytest",
    "pytest-cov",
    "tox",
    "genbadge[coverage]",
]
doc = [
    "furo",
    "myst-parser",
    "sphinx>=5",
    "sphinx-copybutton",
]

[tool.hatch.version]
path = "src/ppchem_ddip/__init__.py"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[tool.coverage.run]
omit = [
    '__init__.py'
]

[tool.coverage.report]
exclude_also = [
    "if __name__ == .__main__.:",
]
